--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: Run YARN tests
 
 orbs:
-  node: circleci/node@x.y
+  node: circleci/node@4.1.0
 workflows:
   test_my_app:
     jobs:
