--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,32 @@
 version: 2.1
-executors:
-  docker-publisher:
-    environment:
-      IMAGE_NAME: jameswoolfenden/buildit
-    docker:
-      - image: circleci/buildpack-deps:stretch
-
+orbs:
+  packer: salaxander/packer@0.1
+  node: circleci/node@4.1.0
 jobs:
   build:
-    executor: docker-publisher
+    executor: node/default
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: Build Docker image
-          command: docker build -t $IMAGE_NAME:latest .
-      - run:
-          name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
-  publish-latest:
-    executor: docker-publisher
+      - node/install-packages:
+          cache-path: ~/project/node_modules
+          override-ci-command: npm install
+      - run: npm run test
+  packer-build:
+    executor: packer/default
     steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - setup_remote_docker
-      - run:
-          name: Load archived Docker image
-          command: docker load -i /tmp/workspace/image.tar
-      - run:
-          name: Publish Docker Image to Docker Hub
-          command: |
-            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-            docker push $IMAGE_NAME:latest
+      - checkout
+      - build:
+          template: base-aws-ubuntu.json
+          args: '-var aws_region=eu-west-2'
 workflows:
   version: 2
-  build-master:
+
+  build-test:
     jobs:
       - build:
           filters:
             branches:
               only: master
-      - publish-latest:
+      - packer-build:
           requires:
-            - build
+          - build
