--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   packer: salaxander/packer@0.0.3
   node: circleci/node@4.1.0
 jobs:
-  build:
+  build-node:
     docker:
       - image: 'cimg/base:stable'
     steps:
@@ -23,7 +23,7 @@ workflows:
   version: 2
   build-test:
     jobs:
-      - build:
+      - build-node:
           filters:
             branches:
               only: master
