--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - checkout
       - terraform/init:
           path: ./iac
-          backend-config: "token=${ATLAS_TOKEN}"
+          backend_config: "token=${ATLAS_TOKEN}"
       - terraform/apply:
           path: ./iac
           var: 'max_size=4,min_size=4'
