--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,15 @@ jobs:
     executor: terraform/default
     steps:
       - checkout
-      - terraform/apply:
-          path: ./iac
-          var: 'max_size=4,min_size=4'
-          backend_config: "token=${ATLAS_TOKEN}"
-      - terraform/apply:
-          path: ./iac
-          backend_config: "token=${ATLAS_TOKEN}"
-    working_directory: ~/iac
+      - run:
+          command: terraform init -backend-config "token=${ATLAS_TOKEN}"
+          working_directory: ~/iac
+      - run:
+          command: terraform apply -var 'max_size=4' -var 'min_size=4' -auto-approve
+          working_directory: ~/iac
+      - run:
+          command: terraform apply -auto-approve
+          working_directory: ~/iac
 workflows:
   version: 2
   packer:
