--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,15 +23,14 @@ jobs:
           args: -var aws_region=eu-west-1
   scale-up:
     executor: terraform/default
-    working_directory: ~/iac
     steps:
       - checkout
       - run:
-          command: terraform init -backend-config "token=${ATLAS_TOKEN}"
+          command: terraform init -backend-config "token=${ATLAS_TOKEN}" ~/iac
       - run:
-          command: terraform apply -var 'max_size=4' -var 'min_size=4' -auto-approve
+          command: terraform apply -var 'max_size=4' -var 'min_size=4' -auto-approve ~/iac
       - run:
-          command: terraform apply -auto-approve
+          command: terraform apply -auto-approve ~/iac
 workflows:
   version: 2
   packer:
